objects/Solar_Context_historical_data__b.object
<CustomObject>
    <fields>
        <fullName>ContextKey__c</fullName>
        <label>ContextKey</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformEvent__c</fullName>
        <label>PlatformEvent</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplayId__c</fullName>
        <label>ReplayId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tracker_Event_error_code__c</fullName>
        <label>Tracker_Event_error_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracker_Event_power_output__c</fullName>
        <label>Tracker_Event_power_output</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker_Event_rotation_x__c</fullName>
        <label>Tracker_Event_rotation_x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker_Event_rotation_z__c</fullName>
        <label>Tracker_Event_rotation_z</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>iot_insight_index</fullName>
        <fields>
            <name>Mode__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>PlatformEvent__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>ContextKey__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>ReplayId__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>iot_insight_index</label>
    </indexes>
    <label>Solar_Context_historical_data</label>
    <pluralLabel>Solar_Context_historical_data</pluralLabel>
</CustomObject>